--- a/Capstone/src/ui/PayoutsPanel.form
+++ b/Capstone/src/ui/PayoutsPanel.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.PayoutsPanel">
   <grid id="27dc6" binding="content" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="896" height="681"/>
+      <xy x="20" y="20" width="906" height="681"/>
     </constraints>
     <properties>
       <enabled value="false"/>
@@ -10,32 +10,9 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="f4581" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="10" left="25" bottom="15" right="0" weightx="0.0" weighty="0.0"/>
-        </constraints>
-        <properties>
-          <font size="28" style="1"/>
-          <text value="Payout"/>
-        </properties>
-      </component>
-      <component id="93f6e" class="javax.swing.JTextField" binding="Search" custom-create="true">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-          <gridbag top="5" left="20" bottom="0" right="8" weightx="0.0" weighty="0.0" ipadx="150"/>
-        </constraints>
-        <properties>
-          <font style="0"/>
-          <foreground color="-14013132"/>
-          <text value="Search Payout ID"/>
-        </properties>
-      </component>
       <component id="e0ec4" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -45,7 +22,7 @@
       </component>
       <scrollpane id="aa21c" binding="ScrollHistory">
         <constraints>
-          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
           <gridbag top="10" left="20" bottom="10" right="20" weightx="20.0" weighty="20.0" ipadx="20" ipady="20"/>
         </constraints>
         <properties>
@@ -63,7 +40,7 @@
       </scrollpane>
       <component id="aa205" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="20" left="20" bottom="5" right="5" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -73,7 +50,7 @@
       </component>
       <scrollpane id="e77d4" binding="ScrollPending">
         <constraints>
-          <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="5" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
           <gridbag top="10" left="20" bottom="10" right="20" weightx="20.0" weighty="20.0" ipadx="20" ipady="180"/>
         </constraints>
         <properties/>
@@ -89,8 +66,8 @@
       </scrollpane>
       <grid id="60cbc" layout-manager="GridBagLayout">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="10" left="25" bottom="2" right="10" weightx="0.0" weighty="0.0"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="10" left="45" bottom="2" right="10" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -103,16 +80,18 @@
             <properties>
               <background color="-13726737"/>
               <foreground color="-13726737"/>
+              <minimumSize width="190" height="49"/>
             </properties>
             <border type="none"/>
             <children>
               <component id="113c0" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag top="0" left="2" bottom="0" right="0" weightx="0.0" weighty="0.0" ipadx="110"/>
+                  <gridbag top="5" left="10" bottom="0" right="0" weightx="0.0" weighty="0.0" ipadx="110"/>
                 </constraints>
                 <properties>
                   <background color="-13726737"/>
+                  <font size="11"/>
                   <foreground color="-854793"/>
                   <text value="Total Payout   "/>
                 </properties>
@@ -120,7 +99,7 @@
               <component id="8ceb6" class="javax.swing.JLabel" binding="PayoutNum">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag top="5" left="2" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                  <gridbag top="5" left="10" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <background color="-13726737"/>
@@ -140,22 +119,25 @@
           <grid id="c994a" layout-manager="GridBagLayout">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0" ipadx="10" ipady="20"/>
+              <gridbag weightx="0.0" weighty="0.0" ipadx="10" ipady="24"/>
             </constraints>
             <properties>
               <background color="-13726737"/>
               <enabled value="false"/>
               <foreground color="-1053210"/>
+              <maximumSize width="-1" height="-1"/>
+              <minimumSize width="190" height="44"/>
             </properties>
             <border type="none"/>
             <children>
               <component id="35ccc" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag top="0" left="2" bottom="0" right="0" weightx="0.0" weighty="0.0" ipadx="100"/>
+                  <gridbag top="10" left="10" bottom="0" right="0" weightx="0.0" weighty="0.0" ipadx="100"/>
                 </constraints>
                 <properties>
                   <background color="-13726737"/>
+                  <font size="11"/>
                   <foreground color="-854793"/>
                   <text value="Pending Payout"/>
                 </properties>
@@ -163,7 +145,7 @@
               <component id="bc08a" class="javax.swing.JLabel" binding="PendingNum">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag top="5" left="2" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                  <gridbag top="5" left="10" bottom="5" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <background color="-13726737"/>
@@ -178,8 +160,8 @@
       </grid>
       <component id="502ee" class="javax.swing.JButton" binding="transferButton" custom-create="true" default-binding="true">
         <constraints>
-          <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="5" left="5" bottom="10" right="20" weightx="0.0" weighty="0.0" ipadx="10" ipady="5"/>
+          <grid row="7" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="5" left="5" bottom="25" right="20" weightx="0.0" weighty="0.0" ipadx="10" ipady="5"/>
         </constraints>
         <properties>
           <background color="-13726737"/>
@@ -187,6 +169,47 @@
           <foreground color="-854793"/>
           <hideActionText value="false"/>
           <text value="Transfer"/>
+        </properties>
+      </component>
+      <vspacer id="f6385">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0" ipady="20"/>
+        </constraints>
+      </vspacer>
+      <vspacer id="b0b6">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0" ipady="13"/>
+        </constraints>
+      </vspacer>
+      <hspacer id="e44ca">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0" ipadx="25"/>
+        </constraints>
+      </hspacer>
+      <component id="f4581" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="10" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <font size="28" style="1"/>
+          <text value="Payouts"/>
+        </properties>
+      </component>
+      <component id="93f6e" class="javax.swing.JTextField" binding="Search" custom-create="true">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+          <gridbag top="5" left="45" bottom="0" right="8" weightx="0.0" weighty="0.0" ipadx="150"/>
+        </constraints>
+        <properties>
+          <font style="0"/>
+          <foreground color="-14013132"/>
+          <text value="Search Payout ID"/>
         </properties>
       </component>
     </children>
