--- a/Capstone/src/ui/TransactionsPanel.form
+++ b/Capstone/src/ui/TransactionsPanel.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.TransactionsPanel">
-  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="7" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="8" column-count="12" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
-      <xy x="20" y="20" width="675" height="839"/>
+      <xy x="20" y="20" width="858" height="839"/>
     </constraints>
     <properties>
       <background color="-1118482"/>
@@ -12,19 +12,9 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="3e662" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-14013132"/>
-          <font size="28" style="1"/>
-          <text value="Transactions"/>
-        </properties>
-      </component>
       <scrollpane id="f9f9d" binding="scroll">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="7" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="2" row-span="1" col-span="10" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-854793"/>
@@ -47,8 +37,9 @@
       <grid id="9d4fb" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="150" height="-1"/>
+          <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="-1"/>
+            <preferred-size width="-1" height="60"/>
           </grid>
         </constraints>
         <properties>
@@ -63,6 +54,7 @@
               </grid>
             </constraints>
             <properties>
+              <font size="11"/>
               <foreground color="-854793"/>
               <text value="Total Transactions"/>
             </properties>
@@ -75,7 +67,7 @@
             </constraints>
             <properties>
               <background color="-854793"/>
-              <font size="20"/>
+              <font size="20" style="1"/>
               <foreground color="-854793"/>
               <text value="Label"/>
             </properties>
@@ -84,7 +76,8 @@
       </grid>
       <component id="87105" class="javax.swing.JTextField" binding="searchTextField" custom-create="true" default-binding="true">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="2" height="-1"/>
             <preferred-size width="200" height="-1"/>
           </grid>
         </constraints>
@@ -95,24 +88,25 @@
       </component>
       <hspacer id="75e0f">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="2" row-span="1" col-span="4" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="27bfd">
         <constraints>
-          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="71523">
         <constraints>
-          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="8" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <grid id="bc283" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="1" use-parent-layout="false">
-            <minimum-size width="150" height="-1"/>
+          <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="-1"/>
+            <preferred-size width="-1" height="60"/>
           </grid>
         </constraints>
         <properties>
@@ -128,6 +122,7 @@
             </constraints>
             <properties>
               <background color="-854793"/>
+              <font size="11"/>
               <foreground color="-854793"/>
               <text value="Total Store Revenue"/>
             </properties>
@@ -135,12 +130,12 @@
           <component id="32ff" class="javax.swing.JLabel" binding="totalStoreRevenueLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="58" height="17"/>
+                <preferred-size width="89" height="17"/>
               </grid>
             </constraints>
             <properties>
               <background color="-854793"/>
-              <font size="20"/>
+              <font size="20" style="1"/>
               <foreground color="-854793"/>
               <text value="Label"/>
             </properties>
@@ -150,8 +145,9 @@
       <grid id="d97c" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="1" use-parent-layout="false">
+          <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="-1"/>
+            <preferred-size width="200" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -166,17 +162,20 @@
             </constraints>
             <properties>
               <background color="-854793"/>
+              <font size="11"/>
               <foreground color="-854793"/>
               <text value="Total Consignor Share"/>
             </properties>
           </component>
           <component id="300d4" class="javax.swing.JLabel" binding="totalConsignorShareLabel">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="89" height="-1"/>
+              </grid>
             </constraints>
             <properties>
               <background color="-854793"/>
-              <font size="20"/>
+              <font size="20" style="1"/>
               <foreground color="-854793"/>
               <text value="Label"/>
             </properties>
@@ -185,7 +184,7 @@
       </grid>
       <component id="af940" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="-1" height="10"/>
           </grid>
         </constraints>
@@ -195,12 +194,58 @@
       </component>
       <component id="fa0cf" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="-1" height="10"/>
           </grid>
         </constraints>
         <properties>
           <text value=""/>
+        </properties>
+      </component>
+      <hspacer id="69cfc">
+        <constraints>
+          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false">
+            <minimum-size width="2" height="-1"/>
+            <preferred-size width="2" height="-1"/>
+          </grid>
+        </constraints>
+      </hspacer>
+      <hspacer id="13e17">
+        <constraints>
+          <grid row="3" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false">
+            <preferred-size width="2" height="-1"/>
+          </grid>
+        </constraints>
+      </hspacer>
+      <vspacer id="71675">
+        <constraints>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="13"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <vspacer id="5252f">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="10"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <hspacer id="139de">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="40" height="-1"/>
+          </grid>
+        </constraints>
+      </hspacer>
+      <component id="3e662" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="9" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-14013132"/>
+          <font size="28" style="1"/>
+          <text value="Transactions"/>
         </properties>
       </component>
     </children>
